--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.7.0",
+    "axios": "^1.7.2",
     "expo": "~51.0.17",
+    "expo-image-picker": "~15.0.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-hook-form": "^7.52.1",
+    "react-native": "0.74.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
